--- a/config.plist
+++ b/config.plist
@@ -1401,7 +1401,7 @@
 			<key>SystemProductName</key>
 			<string>iMac15,1</string>
 			<key>SystemSerialNumber</key>
-			<string>C02KL0RADNCW</string>
+			<string></string>
 			<key>SystemUUID</key>
 			<string>177E531D-EF75-4C38-8356-C5AB67F71E48</string>
 		</dict>
